--- a/BuddyWingStatus/Views/Shared/_Layout.cshtml
+++ b/BuddyWingStatus/Views/Shared/_Layout.cshtml
@@ -4,11 +4,40 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+    <link href="../../Content/bootstrap.css" rel="stylesheet" type="text/css" />
     <link href="@System.Web.Optimization.BundleTable.Bundles.ResolveBundleUrl("~/Content/css")" rel="stylesheet" type="text/css" />
     <link href="@System.Web.Optimization.BundleTable.Bundles.ResolveBundleUrl("~/Content/themes/base/css")" rel="stylesheet" type="text/css" />
-    <script src="@System.Web.Optimization.BundleTable.Bundles.ResolveBundleUrl("~/Scripts/js")"></script>
+    <link href="~/Content/jquery.dataTables.css" rel="stylesheet" type="text/css" />
+    <script src="@System.Web.Optimization.BundleTable.Bundles.ResolveBundleUrl("~/Scripts/js")"></script>  
+    <script src="../../Scripts/jquery-1.6.2.js" type="text/javascript"></script>
+    <script src="../../Scripts/jquery-ui-1.8.11.js" type="text/javascript"></script>
+    <script src="../../Scripts/jquery.dataTables.js" type="text/javascript"></script>
+    <style>
+      body {
+        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+      }
+    </style>
 </head>
-<body>
-    @RenderBody()
-</body>
+    <body>
+        
+        <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="#">BUDDYWING PLANET NAV STATUS</a>
+          <div class="nav-collapse">
+            <ul class="nav">
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+        <div class="container">
+            @RenderBody()
+        </div>
+    </body>
 </html>
